[package]
name = "kermin-mod-manager"
version = "1.0.0"
description = "A mod manager for Single Player Tarkov (SPT) 4.0"
authors = ["SorenByte"]
license = "MIT"
repository = "https://github.com/SorenByte/kermin-mod-manager"
edition = "2021"

[lib]
name = "spt_mod_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
regex = "1"
sevenz-rust2 = { version = "0.21", features = ["util"] }
tokio = { version = "1", features = ["time", "rt"] }
base64 = "0.22"
unrar = "0.5"
futures-util = "0.3"
